Fixed drawer shadow inside overflow.

--- a/src/styl/drawer/drawer.styl
+++ b/src/styl/drawer/drawer.styl
@@ -38,7 +38,7 @@ $drawer-transition-duration = $drawer-fade-duration + $drawer-slide-duration;
         & > .drawer-scroller {
             display: block;
             position: absolute;
-            overflow-y: hidden;
+            //overflow-y: hidden;
             max-height: 100%;
             z-index: $drawer-z-index + 1;
             transition-property: transform;
@@ -128,8 +128,8 @@ $drawer-transition-duration = $drawer-fade-duration + $drawer-slide-duration;
                 transform: none;
                 overflow-y: visible;
                 overflow-x: visible;
-                animation-name: overflow-xy-scroll;
-                animation-duration: $drawer-transition-duration;
+                //animation-name: overflow-xy-scroll;
+                //animation-duration: $drawer-transition-duration;
             }
         }
     }
